# rikurikutest-py

./: LICENSE  README.md  main.py  prefix.json  pyproject.toml  questions.json
commands/: admin.py  embed.py  riku.py
