[tool.poetry]
name = "rikurikutest-pu"
version = "0.1.0"
description = ""
authors = ["Liteyan <me@ayutsuki.net>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.2"
jishaku = "^1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
